Bringing back the alignfull and alignwide styles. Adding a max width really far up the page to see if that changes the too-wide blowing out issues that have popped up.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,6 +73,7 @@ big{
     flex-grow: 1;
     font-size: 18px;
     line-height: 28px;
+	max-width: 100%;
 }
 .site-main h2, .page-sidebar h2{
 	color: $elmsgold;
@@ -1987,11 +1988,17 @@ th .smallText{
     }
 }
 .alignfull {
+	width: 100vw;
+	margin: 2rem calc(50% - 50vw);
 }
 .alignwide {
+	width: 100vw;
+	margin: 2rem calc(50% - 50vw);
 }
 @media (min-width: 960px) {
 	.alignwide {
+		width: calc(100% + 20vw);
+		margin: 2rem -10vw;
 	}
 }
 /* END generic, universal, reusable styles */
